# sqlkit

./: .gitignore  .impeccable.md  AGENTS.md  ARCHITECTURE_AI_AGENT.md  BUILD.md  CHANGELOG.md  README.md  README_zh.md  components.json  eslint.config.js  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: node.yml  release.yml
docs/: DISTRIBUTION.md  I18N.md  SSL_UI_DESIGN.md  TRANSFER.md  TRANSFER_DESIGN.md  TRANSFER_SCOPE_DESIGN.md
jdbc-bridge/: pom.xml
scripts/: build-release-notes.sh  check-version.sh  collect-binaries.sh  collect-updater-manifests.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: mysql_usage.rs  postgres_usage.rs  sqlite_usage.rs  sqlserver_usage.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agent_adapters.rs  api_response.rs  lib.rs  main.rs  menu.rs  state.rs
src-tauri/src/agent/: compact.rs  config.rs  conversation.rs  executor.rs  harness.rs  loop_runner.rs  loop_runner_support.rs  mod.rs  model_registry.rs  provider_adapter.rs  query_history.rs  session_store.rs  token_counter.rs  tools.rs
src-tauri/src/agent/chat_formatter/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/capabilities/: commands.rs  mod.rs  registry.rs  sql.rs  sqlite.rs  sqlkit.rs  sqlserver.rs  types.rs
src-tauri/src/commands/: browse.rs  browse.rs.bak2  connection.rs  converter.rs  file_operations.rs  helpers.rs  jdbc.rs  mod.rs  query.rs  server.rs  store.rs  transfer.rs
src-tauri/src/common/: format.rs  http_client.rs  mod.rs
src-tauri/src/connection/: cache.rs  guardian.rs  handle.rs  handle_impl.rs  mod.rs
src-tauri/src/database/: POSTGRES_README.md  README.md  SQLSERVER_README.md  adapter.rs  clickhouse.rs  config.rs  duckdb.rs  error.rs  explain.rs  firebird.rs  http_sql.rs  manager.rs  mod.rs  mysql.rs  odbc.rs  oracle.rs  pool.rs  postgres.rs  rqlite.rs  search.rs  sql_service.rs  sqlite.rs  sqlserver.rs  strategy.rs  tests.rs  turso.rs  types.rs
src-tauri/src/database/jdbc_bridge/: adapter.rs  download.rs  drivers.toml  error_classifier.rs  fallback.rs  jre.rs  launcher.rs  mod.rs  pool.rs  progress.rs  protocol.rs  registry.rs  tns_parser.rs
src-tauri/src/db/: mod.rs
src-tauri/src/download/: mod.rs
src-tauri/src/ssh/: config.rs  mod.rs  transport.rs  tunnel.rs
src-tauri/src/transfer/: ddl.rs  defaults.rs  export.rs  import.rs  migration.rs  mod.rs  profile_store.rs  progress.rs  restore.rs  types.rs
src-tauri/tests/: connection_manager_tests.rs  mysql_integration.rs  postgres_integration.rs  sqlite_integration.rs  sqlserver_integration.rs
src/__tests__/: appStore.test.ts  common.test.ts  connectionStore.test.ts  dataTableHelpers.test.ts  databaseStore.test.ts  graph-layout.test.ts  graph-routing.test.ts  historyStore.test.ts  queryStore.test.ts  tabStore.test.ts  useWindowControls.test.ts
src/assets/: index.css
src/common/: index.ts  jsonify.ts  sqlParser.ts
src/components/: README.md  SQLEditor.vue  UpdateNotification.vue  agent-message-bubble.vue  chat-panel.vue  context-indicator.vue  markdown-render.vue  model-picker.vue
src/components/connections/: ConnectingModal.vue  ServerCard.vue  ServerFormDialog.vue  index.ts
src/components/database-browser/: DataTableView.vue  DatabaseBrowser.vue  DbTypeIcon.vue  DdlModal.vue  ForeignKeysTab.vue  IndexesTab.vue  ListingTab.vue  QueryResultPanel.vue  QueryTabs.vue  SchemaTab.vue  ServerInfoView.vue  TriggersTab.vue  dataTableHelpers.ts  index.ts
src/components/er-diagram/: EngineeringEntity.vue  ErDiagramView.vue  TableCard.vue  graph-layout.ts  graph-routing.ts  types.ts
src/components/explain-plan/: ExplainPlanNodeTree.vue  ExplainPlanPanel.vue  ExplainPlanRawView.vue  ExplainPlanSummaryTable.vue  index.ts
src/components/grid/: BatchActionBar.vue  CellContextMenu.vue  ColumnHeaderContextMenu.vue  DataGrid.vue  EditRowDialog.vue  FilterBar.vue  JsonViewDialog.vue  RowDetailsDialog.vue
src/components/layout/: AiAssistantSidebar.vue  AppHeader.vue  AppLayout.vue  AppSidebar.vue  TaskSidebar.vue  ThemeToggle.vue  WindowControls.vue
src/components/sidebar/: ChangeConnectionDialog.vue  ConnectionSelector.vue  CreateDatabaseDialog.vue  CreateObjectDialog.vue  CreateTableDialog.vue  DatabaseSelectorRow.vue  DeleteQueryDialog.vue  SchemaTree.vue  (+8 more)
src/composables/: agentRuntime.ts  index.ts  useAgentContext.ts  useAppUpdater.ts  useChatAgent.ts  useDataGridCopy.ts  useDataGridFilter.ts  useDataGridSelection.ts  useDataGridSort.ts  useDataStudioChatAgent.ts  useDatabaseIcon.ts  useDownloadEvents.ts  useMinLoadingTime.ts  useMonacoEditor.ts  useNotifications.ts  usePlatform.ts  useSidebarChatAgent.ts  useSqlFormatter.ts  useSqlStatements.ts  useTableSearch.ts  useTheme.ts  useWindowControls.ts
src/datasources/: agentApi.ts  browseApi.ts  connectionApi.ts  erDiagramApi.ts  fileApi.ts  index.ts  jdbcApi.ts  storeApi.ts  transferApi.ts
src/lang/: enUS.ts  index.ts  zhCN.ts
src/lib/: utils.ts
src/pages/: BackupServerPage.vue  ConnectionsPage.vue  DataStudioPage.vue  HistoryPage.vue  ImportExportPage.vue  QueriesPage.vue  SettingsPage.vue  TransferPage.vue
src/router/: index.ts
src/store/: accountStore.ts  appStore.ts  connectionStore.ts  dataStudioStore.ts  databaseStore.ts  historyStore.ts  index.ts  queryStore.ts  tabStore.ts  transferStore.ts
src/types/: api.ts  chat.ts  connection.ts  explainPlan.ts  grid.ts  transfer.ts
src/utils/: explainPlanParser.ts
tests/: explainPlanParser.test.ts
tests/common/: index.test.ts  sqlParser.test.ts
tests/components/: ErDiagramView.test.ts
tests/composables/: useNotifications.test.ts  useSqlFormatter.test.ts  useSqlStatements.test.ts
tests/datasources/: connectionApi.test.ts  fileApi.test.ts  storeApi.test.ts
tests/store/: appStore.test.ts  connectionStore.test.ts  databaseStore.test.ts  historyStore.test.ts  tabStore.test.ts
tests/types/: connection.test.ts
types/: markdown-it-task-lists.d.ts  vite-env.d.ts
(+127 files in other folders)
