[package]
name = "sqlkit"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sqlkit_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = [ "full" ] }
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-chrono-0_4"
] }
postgres-native-tls = "0.5"
native-tls = "0.2"
deadpool-postgres = "0.14"
mysql_async = { version = "0.34", features = [ "native-tls-tls" ] }
tokio-native-tls = "0.3"
tiberius = { version = "0.12", default-features = false, features = [
  "sql-browser-tokio",
  "tds73",
  "rustls"
] }
tokio-util = { version = "0.7", features = [ "compat" ] }
rusqlite = { version = "0.32", features = [
  "bundled",
  "chrono"
] }
uuid = { version = "1", features = [ "v4" ] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
chrono = "0.4"
