[package]
name = "sqlkit"
version = "0.3.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sqlkit_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = [ "full" ] }
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
  "with-uuid-1"
] }
postgres-native-tls = "0.5"
native-tls = "0.2"
deadpool-postgres = "0.14"
mysql_async = { version = "0.34", features = [ "native-tls-tls" ] }
tokio-native-tls = "0.3"
tiberius = { version = "0.12", default-features = false, features = [
  "sql-browser-tokio",
  "tds73",
  "rustls",
  "chrono",
  "rust_decimal"
] }
tokio-util = { version = "0.7", features = [ "compat" ] }
rusqlite = { version = "0.32", features = [
  "bundled",
  "chrono"
] }
uuid = { version = "1", features = [ "v4" ] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2"
url = "2"
base64 = "0.22"
chrono = "0.4"
rust_decimal = { version = "1", features = [ "db-postgres" ] }
hex = "0.4"
rust_xlsxwriter = "0.64"
calamine = "0.22"

# Agent / LLM dependencies
async-openai = "0.25"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls"
] }
tiktoken-rs = "0.5"
http = "1"
log = "0.4"
futures = "0.3"
rand = "0.8"

# Archive extraction (JRE downloads)
flate2 = "1.0"
tar = "0.4"

# Database expansion adapters
duckdb = { version = "1.3", optional = true, features = [ "bundled" ] }
# Pure Rust Oracle TNS implementation, optional feature
oracle-rs = { version = "0.1", optional = true }

[features]
default = [ "duckdb" ]
duckdb = [ "dep:duckdb" ]
oracle = [ "dep:oracle-rs" ]
