[package]
name = "sqlkit"
version = "0.6.3"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sqlkit_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = [ "full" ] }
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
  "with-uuid-1"
] }
postgres-native-tls = "0.5"
native-tls = "0.2"
deadpool-postgres = "0.14"
mysql_async = { version = "0.34", features = [ "native-tls-tls" ] }
tokio-native-tls = "0.3"
tiberius = { version = "0.12", default-features = false, features = [
  "sql-browser-tokio",
  "tds73",
  "rustls",
  "chrono",
  "rust_decimal"
] }
tokio-util = { version = "0.7", features = [ "compat" ] }
rusqlite = { version = "0.32", features = [
  "bundled",
  "chrono"
] }
uuid = { version = "1", features = [ "v4" ] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2"
url = "2"
base64 = "0.22"
chrono = "0.4"
rust_decimal = { version = "1", features = [ "db-postgres" ] }
hex = "0.4"
rust_xlsxwriter = "0.64"
calamine = "0.22"

# Agent / LLM dependencies (now in data-studio-agent-lib)
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
  "socks"
] }
http = "1"
log = "0.4"
futures = "0.3"
rand = "0.8"
data-studio-agent-lib = { path = "../../data-studio-agent/crates/agent-lib" }
data-studio-agent-storage-sqlite = { path = "../../data-studio-agent/crates/storage-sqlite" }

# Archive extraction (JRE downloads)
flate2 = "1.0"
tar = "0.4"
zip = { version = "2", features = [ "deflate" ] }

# TOML parsing (drivers.toml)
toml = "0.8"
sha2 = "0.10"
russh = "0.60"
portpicker = "0.1.1"
pageant = "0.2"

[dev-dependencies]
mockall = "0.13"

[features]
default = []
